tests/ivg/invalid/path_close_has_args.ivg
format IVG-3
BOUNDS 0,0,10,10
// close does not accept any arguments
PATH [move-to 0,0; close 1]

